crates/lang-markdown/tests/snapshots/parser__basic.snap
---
source: crates/lang-markdown/tests/parser.rs
expression: "Markdown :: load(path).expect(\"No errors\")"
---
# Top

Content

## Sub

More content
