crates/lang-markdown/tests/snapshots/parser__paragraphs.snap
---
source: crates/lang-markdown/tests/parser.rs
expression: "Markdown :: load(path).expect(\"No errors\")"
---
# A test

## Text

A text

## Table

| A table
|------------
| Table

## Code

```µcad
Circle(r = 42mm);
```
